<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/show_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance = "?attr/textAppearanceBody1"
        android:text="@string/show_floating_window"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"/>

    <View
        android:id="@+id/separator_1"
        app:layout_constraintTop_toBottomOf="@id/show_text"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/gray_200"/>

    <Button
        android:id="@+id/get_screen_event"
        android:text="@string/get_screen_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toBottomOf="@id/separator_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <View
        android:id="@+id/separator_3"
        app:layout_constraintTop_toBottomOf="@id/get_screen_event"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/gray_200"/>

    <Button
        android:id="@+id/key_up_sync_btn"
        android:text="@string/catch_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toBottomOf="@id/separator_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>


    <Switch
        android:id="@+id/start_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@id/show_text"
        app:layout_constraintTop_toTopOf="@id/show_text"
        app:layout_constraintBottom_toBottomOf="@id/show_text"/>


    <TextView
        android:id="@+id/event_key_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance = "?attr/textAppearanceBody1"
        android:text="@string/event_id_key_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_up_sync_btn"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"/>

    <EditText
        android:id="@+id/key_up_event"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/event_key_up_text"
        app:layout_constraintTop_toTopOf="@id/event_key_up_text"
        app:layout_constraintBottom_toBottomOf="@id/event_key_up_text" />

    <TextView
        android:id="@+id/id_key_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance = "?attr/textAppearanceBody1"
        android:text="@string/id_key_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_key_up_text"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/key_up_id"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/id_key_up_text"
        app:layout_constraintTop_toTopOf="@id/id_key_up_text"
        app:layout_constraintBottom_toBottomOf="@id/id_key_up_text" />

    <Button
        android:id="@+id/key_down_sync_btn"
        android:text="@string/catch_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toBottomOf="@id/id_key_up_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"/>


    <TextView
        android:id="@+id/event_key_down_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance = "?attr/textAppearanceBody1"
        android:text="@string/event_id_key_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_down_sync_btn"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"/>

    <EditText
        android:id="@+id/key_down_event"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/event_key_down_text"
        app:layout_constraintTop_toTopOf="@id/event_key_down_text"
        app:layout_constraintBottom_toBottomOf="@id/event_key_down_text" />

    <TextView
        android:id="@+id/id_key_down_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance = "?attr/textAppearanceBody1"
        android:text="@string/id_key_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_key_down_text"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/key_down_id"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/id_key_down_text"
        app:layout_constraintTop_toTopOf="@id/id_key_down_text"
        app:layout_constraintBottom_toBottomOf="@id/id_key_down_text" />

    <View
        android:id="@+id/separator_2"
        app:layout_constraintTop_toBottomOf="@id/id_key_down_text"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/gray_200"/>

    <Button
        android:id="@+id/save_btn"
        android:text="@string/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_2" />


</androidx.constraintlayout.widget.ConstraintLayout>